tests/custom/basic/parsing-imply/stderr.expected
Error:
    1_noparens.essence:7:19:
  |
7 | such that a -> !b -> c -> d
  |                   ^
Missing Expression

1_noparens.essence:7:19:
  |
7 | such that a -> !b -> c -> d
  |                   ^
Missing ,

1_noparens.essence:7:24:
  |
7 | such that a -> !b -> c -> d
  |                        ^
Missing Expression

1_noparens.essence:7:24:
  |
7 | such that a -> !b -> c -> d
  |                        ^
Missing ,

Error:
    1_noparens.essence:7:19:
  |
7 | such that a -> !b -> c -> d
  |                   ^
Missing Expression

1_noparens.essence:7:19:
  |
7 | such that a -> !b -> c -> d
  |                   ^
Missing ,

1_noparens.essence:7:24:
  |
7 | such that a -> !b -> c -> d
  |                        ^
Missing Expression

1_noparens.essence:7:24:
  |
7 | such that a -> !b -> c -> d
  |                        ^
Missing ,

cat: conjure-output/model000001.solutions: No such file or directory
Error:
    4_mixparens.essence:7:26:
  |
7 | such that a -> (!b -> c) -> d
  |                          ^
Missing Expression

4_mixparens.essence:7:26:
  |
7 | such that a -> (!b -> c) -> d
  |                          ^
Missing ,

Error:
    4_mixparens.essence:7:26:
  |
7 | such that a -> (!b -> c) -> d
  |                          ^
Missing Expression

4_mixparens.essence:7:26:
  |
7 | such that a -> (!b -> c) -> d
  |                          ^
Missing ,

